Change color background

--- a/presentation2/index.Rmd
+++ b/presentation2/index.Rmd
@@ -7,7 +7,7 @@ framework   : revealjs
 highlighter : highlight.js  
 hitheme     : default      
 revealjs:
-  theme: Moon
+  theme: default
   transition: Convex
   center: "true"
 widgets     : []            
